@@ -791,7 +791,6 @@ unsigned int line_editor_impl::collect_words(words& words, matches_impl* matches
             m_printer.print(tmp.c_str(), tmp.length());
             for (auto const& w : words)
             {
-                str<> tmp;
                 tmp.format("\x1b[0;37;7m%.*s\x1b[m ", w.length, m_buffer.get_buffer() + w.offset);
                 m_printer.print(tmp.c_str(), tmp.length());
             }
@@ -837,7 +836,6 @@ unsigned int line_editor_impl::collect_words(words& words, matches_impl* matches
             m_printer.print(tmp.c_str(), tmp.length());
             for (auto const& w : words)
             {
-                str<> tmp;
                 if (i_word == words.size())
                 {
                     tmp.format("\x1b[0;35;7m%.*s\x1b[0;37;7m%.*s\x1b[m ",
